# stock_notifier

./: .gitignore  README.md  pyproject.toml  stockNotifier.py  stock_notifier.py
.github/workflows/: run_with_scheduled.yml
